# info-pulse

./: .env copy.example  .gitignore  README.md  main.py  pyproject.toml  topics.yaml
.github/workflows/: fetch-news.yml
docs/: index.html  news.json
src/info_pulse/: __init__.py  news_fetcher.py  site_generator.py  summarizer.py
templates/: index.html.jinja
